<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rti_connext_dds_custom_sql_filter</name>
  <version>0.0.0</version>
  <description>A custom content-filter for RTI Connext DDS which allows empty expressions.</description>
  <maintainer email="asorbini@rti.com">Andrea Sorbini</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rti_connext_dds_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
