<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_dds_common_typesupports</name>
  <version>0.1.0</version>
  <description>A meta-package to hack type support generation for backported rmw_dds_common</description>
  <maintainer email="asorbini@rti.com">Andrea Sorbini</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_typesupport_fastrtps_c</depend>
  <depend>rosidl_typesupport_fastrtps_cpp</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
